
  * Add palettes from rjk's and fanf's mandelbrotters
  * Refactor fractal maths machinery to be traits-based, have it auto-select
  between the available types based on zoom depth, make float/double types
  selectable at configure time.
  * Add benchmarker (`make benchmark')
  * Update build machinery for automake 1.15 & gcc 5.3
  * Fix default save directory (LP#1600657)

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Sun, 10 Jul 2016 20:29:10 +1200

brot2 (1.1) precise; urgency=low

  * Fix automake machinery so that make dist works again. (Oops!)
  * LP#882411: Create unit test framework.
  * Major rewrite of the fractal plotting machinery, with reasonable unit
  test support (closes #882411).  'make check' added.  Updated CLI and gtkui
  to use new machinery.  Removed old Render and Plot2 as obsolete.
  * LP#1039385: Major HUD improvements: text reduced; font size is now
  variable (and a preference); can appear with an outline text effect;
  can show/hide 'Zoom:' legend; uses reasonable superscript notation.
  * LP#1033910: Report in the HUD when we're at the zoom limit, and don't
  bother to zoom further.
  * LP#1099061: Avoid creating/destroying one thread per plot.

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Mon, 14 Jan 2013 22:14:49 +1300

brot2 (1.0) oneiric; urgency=low

  * Gamma release series.
  * LP#783040: Create preferences mechanism, make mouse button and scroll
  events configurable.
  * Fix HSV palette conversion to not worry about subnormals (and instead
  to worry about infinities).
  * LP#883771: Apply clip limits when recentring/zooming.
  * Tentative fix for occasional Cairo segfault on startup.
  * LP#783077: Add Burning Ship, Generalised Celtic, Variant and Bird of Prey
  fractals.
  * LP#883774: Turn control prefs into a first-class window.
  * Speed up some of the palette wrangling maths.
  * Speed up perceived sluggishness in drag-to-zoom rects on large windows.